kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: video-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: docker.io/library/go-streaming-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: videos-public
              mountPath: /app/public/videos
      volumes:
        - name: videos-public
          persistentVolumeClaim:
            claimName: pvc-videos-processed
