kubernetes/kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: video-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.6
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: pvc-kafka
