kubernetes/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: video-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: localhost:32000/go-streaming-ui:latest
          imagePullPolicy: Always
