kubernetes/watcher-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watcher
  namespace: video-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watcher
  template:
    metadata:
      labels:
        app: watcher
    spec:
      containers:
        - name: watcher
          image: docker.io/library/go-streaming-watcher:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: videos-volume
              mountPath: /watch
      volumes:
        - name: videos-volume
          persistentVolumeClaim:
            claimName: pvc-videos
