kubernetes/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: video-streaming
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
