kubernetes/nginx-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"nginx-gateway","app.kubernetes.io/name":"nginx-gateway","app.kubernetes.io/version":"2.0.1"},"name":"nginx-gateway","namespace":"nginx-gateway"},"spec":{"ports":[{"name":"agent-grpc","port":443,"protocol":"TCP","targetPort":8443}],"selector":{"app.kubernetes.io/instance":"nginx-gateway","app.kubernetes.io/name":"nginx-gateway"},"type":"ClusterIP"}}
  creationTimestamp: "2025-07-04T01:36:12Z"
  labels:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/version: 2.0.1
  name: nginx-gateway
  namespace: nginx-gateway
  resourceVersion: "3288"
  uid: 115cec80-b03e-4f51-b6b6-51a8ed117e04
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: agent-grpc
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
