kubernetes/postgres-external.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-postgres
  namespace: video-streaming
subsets:
  - addresses:
      - ip: 192.168.0.242
    ports:
      - port: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: external-postgres
  namespace: video-streaming
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector: {}
