kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: video-streaming
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
