kubernetes/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: video-streaming
spec:
  selector:
    app: ui
  ports:
  - protocol: TCP
    port: 8080      # Port on the service
    targetPort: 80  # Port on the container
  type: ClusterIP
