kubernetes/zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: video-streaming
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
