kubernetes/http-route-streaming.yml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-streaming
  namespace: video-streaming
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
  hostnames:
    - "go.streaming"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api-service
          port: 8080
