kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka-ui-route
  namespace: kafka
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
  hostnames:
    - "hello.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kafka-ui
      backendRefs:
        - name: kafka-ui
          port: 80
